fix(workdrive): enforce mandatory Project_Name for Project entities and Unit_Name with Deal_Name fallback for Units